# methopt-lab

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.gradle  settings.gradle
.github/workflows/: install.yml  standalone.yml  style.yml  ubuntu.yml  windows.yml
all/: CMakeLists.txt
data/: output.txt  test1.txt  test2.txt
gui/: CMakeLists.txt
gui/assets/: styles.css
gui/include/: customwidgets.h
gui/include/lab1/: customwidgets.h
gui/include/lab2/: customwidgets.h  drawer.h  main_window.h  slider.h
gui/source/: customwidgets.cpp  main.cpp
gui/source/lab1/: customwidgets.cpp  main.cpp
gui/source/lab2/: customwidgets.cpp  drawer.cpp  main.cpp  slider.cpp
include/greeter/: greeter.h
include/lab/: brent.h  dichotomy.h  fibonacci.h  functions.h  golden_ratio.h  lab.h  matrix.h  n_function.h  n_optimizer.h  optimizer.h  parabola.h  quadratic_function.h  segment.h  two_point.h  vector.h
include/lab1/: brent.h  dichotomy.h  fibonacci.h  functions.h  golden_ratio.h  optimizer.h  parabola.h  segment.h  two_point.h
include/lab2/: abstract_matrix.h  conjugate_gradient.h  diagonal_matrix.h  fastest_descent.h  function_2d.h  functions.h  gradient_descent.h  lambda_2_function.h  matrix.h  n_function.h  n_function_impl.h  n_optimizer.h  quadratic_function.h  vector.h
include/lab3/: solver.h
include/lab4/: 1d_seach_newton.h  classic_newton.h  descent_newton.h  dfp.h  n_function_impl.h  powell.h
report/: main.tex  settings.tex
report/data/: brent.csv  brent2.csv  dichotomy.csv  dichotomy2.csv  fibonacci.csv  fibonacci2.csv  goldenRatio.csv  goldenRatio2.csv  parabola.csv  parabola2.csv
report/lab1/: main.aux  main.tex  settings.tex
report/lab1/code/: dichotomy.cpp
report/lab1/data/: brent.csv  brent2.csv  parabola2.csv
report/lab2/: main.aux  main.tex  settings.tex
report/lab2/data/: f1.csv  f2.csv  f3.csv
report/lab2/data/con/: n1.csv  n2.csv  n3.csv  n4.csv
report/lab2/data/conjugate/: n1.csv  n2.csv  n3.csv  n4.csv
report/lab2/data/fast/: n1.csv  n2.csv  n3.csv  n4.csv
report/lab2/data/grad/: n1.csv  n2.csv  n3.csv  n4.csv
report/lab2/data/methods/: brent.csv  dichotomy.csv  fibonacci.csv  golden_ratio.csv
report/lab3/: main.tex  settings.tex
report/lab3/data/task2/: n10.csv  n100.csv  n1000.csv  n500.csv
report/lab3/data/task3/: hilbert.csv
report/lab3/data/task4/: dense.csv  lu.csv
report/lab3/data/task5/: msg.csv  msg_hilbert.csv  msg_rev.csv
report/lab4/: main.tex  settings.tex
report/lab4/data/task1/: alpha.txt  classic.txt  descent.txt  search.txt  search1.txt
report/lab4/data/task1_2/: all.txt  smth.txt
report/lab4/data/task3/: classic.txt  dfp.txt  powell.txt
source/: brent.cpp  dichotomy.cpp  fibonacci.cpp  golden_ratio.cpp  greeter.cpp  lab.cpp  matrix.cpp  n_function.cpp  n_optimizer.cpp  optimizer.cpp  parabola.cpp  quadratic_function.cpp  segment.cpp  two_point.cpp  vector.cpp
source/lab1/: brent.cpp  dichotomy.cpp  fibonacci.cpp  golden_ratio.cpp  optimizer.cpp  parabola.cpp  segment.cpp  two_point.cpp
source/lab2/: abstract_matrix.cpp  conjugate_gradient.cpp  diagonal_matrix.cpp  fastest_descent.cpp  function_2d.cpp  functions.cpp  gradient_descent.cpp  lambda_2_function.cpp  matrix.cpp  n_function.cpp  n_function_impl.cpp  n_optimizer.cpp  quadratic_function.cpp  vector.cpp
source/lab3/: ClassicNewton.cpp  solver.cpp
source/lab4/: 1d_search_newton.cpp  classic_newton.cpp  descent_newton.cpp  dfp.cpp  n_function_impl.cpp  powell.cpp
src/main/java/matrix/: DenseMatrix.java  Generator.java  LUDecomposition.java  Matrix.java  ProfileMatrix.java  ProfileMatrixGenerator.java  Solver.java  SparseMatrix.java  SparseMatrixGenerator.java  Utils.java  Vector.java
src/test/java/: GeneratorTest.java  MatrixTest.java
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: greeter.cpp  lab.cpp  lab1.cpp  lambda_2_function.cpp  matrix.cpp  n_optimizer.cpp  quadratic_function.cpp  solver.cpp  vector.cpp
